# openclaw-file-organizer

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/: README.md
apps/local-daemon/: package.json
apps/local-daemon/src/: api-types.ts  config.ts  control-api-client.ts  poller.ts  proposal-seed.ts  runtime-controller.ts  server.ts  state.ts
apps/local-daemon/src/db/: connection.ts  migrate.ts  schema-v1.sql
apps/local-daemon/src/services/: bootstrap-config-store.ts  classification-service.ts  device-credential-store.ts  execution-service.ts  local-store.ts  path-policy-service.ts  planning-provider.ts  proposal-service.ts  rollback-service.ts  scan-service.ts  (+5 more)
apps/local-desktop/: .env.example  index.html  package.json
apps/local-desktop/src/: App.tsx  api.ts  styles.css  tauri-sidecar.ts  types.ts
apps/local-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/local-desktop/src-tauri/capabilities/: default.json
apps/local-desktop/src-tauri/src/: main.rs
apps/vps-control-api/: Dockerfile  package.json
apps/vps-control-api/src/: auth.ts  server.ts  store.ts  types.ts
infra/: README.md
infra/nginx/: ao-control-api.conf
infra/systemd/: ao-control-api.service
openclaw-plugin-auto-organizer/: README.md  index.ts  openclaw.plugin.json  package.json
openclaw-skill-auto-organizer/: README.md  SKILL.md
scripts/: README.md  install-openclaw-auto-organizer-plugin.sh  install-openclaw-auto-organizer-skill.sh  scaffold-smoke.mjs  smoke-with-services.mjs  verify-openclaw-auto-organizer.sh
