[package]
name = "auto-organizer-local-desktop"
version = "0.1.0"
description = "Auto Organizer native local app"
authors = ["Auto Organizer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", default-features = false, features = ["tls"] }
